[gd_scene load_steps=6 format=3 uid="uid://pk5k1q8bx0rj"]

[ext_resource type="Script" path="res://content/ui/components/slider/slider.gd" id="1_ylune"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eiwwn"]
albedo_color = Color(0.133333, 0.133333, 0.133333, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_77ny1"]
material = SubResource("StandardMaterial3D_eiwwn")
top_radius = 0.008
bottom_radius = 0.008
height = 0.003

[sub_resource type="CylinderMesh" id="CylinderMesh_v34nn"]
top_radius = 0.002
bottom_radius = 0.002
height = 0.005

[sub_resource type="BoxShape3D" id="BoxShape3D_h1mn1"]
size = Vector3(0.2, 0.004, 0.01)

[node name="Slider" type="Node3D"]
script = ExtResource("1_ylune")
size = Vector3(20, 0.4, 1)
cutout_border = 0.2
cutout_depth = 0.36

[node name="Rod" type="CSGCombiner3D" parent="."]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
snap = 0.0001

[node name="Outside" type="CSGBox3D" parent="Rod"]
snap = 0.0001
size = Vector3(20, 0.4, 1)

[node name="Cutout" type="CSGCombiner3D" parent="Rod"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021, 0)
operation = 2
snap = 0.0001

[node name="Length" type="CSGBox3D" parent="Rod/Cutout"]
snap = 0.0001
size = Vector3(19, 0.36, 0.6)

[node name="EndRight" type="CSGCylinder3D" parent="Rod/Cutout"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.5, 0, 0)
snap = 0.0001
radius = 0.3
height = 0.36
sides = 36

[node name="EndLeft" type="CSGCylinder3D" parent="Rod/Cutout"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.5, 0, 0)
snap = 0.0001
radius = 0.3
height = 0.36
sides = 36

[node name="Knob" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.057, 0.00409426, 0)
mesh = SubResource("CylinderMesh_77ny1")

[node name="Pin" type="MeshInstance3D" parent="Knob"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00353538, 0)
mesh = SubResource("CylinderMesh_v34nn")

[node name="CollisionBody" type="StaticBody3D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionBody"]
shape = SubResource("BoxShape3D_h1mn1")

[node name="Label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.105, 0, 0)
visible = false
pixel_size = 0.001
text = "0.2 "
font_size = 10
outline_size = 4
horizontal_alignment = 0
